# IsaacTeleop

./: .clang-format  .coderabbit.yaml  .cursorrules  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  AGENTS.md  BUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  README.md  REUSE.toml  avp_manus.sh  build_isaac_teleop.sh  controller_haptics_overview.md  design_sm.md  requirements-venv_isaac.txt  sonar-project.properties  vcpkg.json
.gitlab/: sonar.yaml
examples/camera_streamer/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  camera_config.py  camera_sources.py  camera_streamer.sh  list_cameras.py  pyproject.toml  teleop_camera_app.py  teleop_camera_sender.py  teleop_camera_sender_subgraph.py  teleop_camera_subgraph.py
examples/camera_streamer/cmake/: holohub-xr.cmake
examples/camera_streamer/config/: multi_camera.yaml  single_camera.yaml  v4l2.yaml  zed_mini.yaml
examples/camera_streamer/operators/: CMakeLists.txt
examples/camera_streamer/test/: setup_test_data.sh  video_file.yaml
examples/camera_viz/: .gitignore  README.md  camera_send.py  camera_sender.py  camera_streamer.py  camera_viz.py  camera_viz.sh  pyproject.toml
examples/camera_viz/codec/: CMakeLists.txt  __init__.py  build.sh  codec_bindings.cpp  h264_decoder.cpp  h264_encoder.cpp  nv12_to_rgba.cu  nv12_to_rgba.cuh
examples/camera_viz/configs/: dellwebcam.yaml  multi_camera.yaml  oakd.yaml  oakd_stereo_xr.yaml  oakd_test.yaml  rtp_receive_test.yaml  rtp_receive_window.yaml  rtp_send_test.yaml  synthetic.yaml  synthetic_stereo.yaml  synthetic_xr_3up.yaml  v4l2.yaml  v4l2_test.yaml  v4l2_window.yaml  video.yaml  zed.yaml  zed_stereo_xr.yaml  zed_test.yaml
examples/camera_viz/pipeline/: __init__.py  interface.py  runner.py
examples/camera_viz/placements/: __init__.py
examples/camera_viz/scripts/: _install_deps.sh  camera-streamer.service.in  loopback.sh  setup_dev_env.sh
examples/camera_viz/sources/: __init__.py  _helpers.py  _nv_decode.py  oakd.py  rtp_h264.py  synthetic.py  v4l2.py  video_file.py  zed.py
examples/camera_viz/tests/: CMakeLists.txt  conftest.py  pyproject.toml  test_paired_frame_source_race.py  test_synthetic_offscreen.py  test_video_file_source.py
examples/camera_viz/transports/: __init__.py  _encoder_factory.py  _nv12_convert.py  _nv_encode.py  _nv_encode_gst.py  rtp_h264_receiver.py  rtp_h264_sender.py
examples/g1_wuji_teleop/: CMakeLists.txt  README.md
examples/g1_wuji_teleop/config/: avp_manus.yaml  avp_manus.yml  vr_manus.yaml
examples/g1_wuji_teleop/docs/: setup.md
examples/g1_wuji_teleop/python/: pyproject.toml
examples/g1_wuji_teleop/scripts/: g1_wuji_teleop_main.py  g1_wuji_teleop_visualizer.py
examples/haptic_feedback/python/: README.md  controller_haptic_example.py  hand_pinch_haptic_example.py  openxr_controller_haptic_example.py  pyproject.toml
examples/hello_tensor/: CMakeLists.txt  README.md  hello_tensor_plugin.cpp  hello_tensor_plugin.hpp  hello_tensor_pusher.cpp  hello_tensor_reader.cpp
examples/mcap_record_replay/cpp/: CMakeLists.txt  record_full_body.cpp
examples/native_openxr/xdev_list/: CMakeLists.txt  main.cpp
examples/oxr/: .gitignore  CMakeLists.txt  README.md
examples/oxr/cpp/: CMakeLists.txt  README.md  oxr_session_sharing.cpp  oxr_simple_api_demo.cpp
examples/oxr/python/: README.md  modular_example.py  modular_example_with_mcap.py  pyproject.toml  test_controller_tracker.py  test_extensions.py  test_full_body_tracker.py  test_hand_inactive_on_plugin_stop.py  test_modular.py  test_oak_camera.py  test_oakd_camera.py  test_session_sharing.py  test_synthetic_hands.py
examples/retargeting/: CMakeLists.txt
examples/retargeting/python/: device_io_visualization_demo.py  dual_source_teleop_example.py  example_retargeters.py  multi_retargeter_tuning_demo_imgui.py  pyproject.toml  sharpa_hand_retargeter_demo.py  simple_visualization_demo.py  sources_example.py  visualization_benchmark_demo.py  wuji_hand_retargeter_demo.py
examples/teleop/: CMakeLists.txt
examples/teleop/python/: dex_bimanual_example.py  dex_hand_retargeting_example.py  foot_pedal_locomotion_example.py  foottroller_locomotion_example.py  full_bimanual_reordering_example.py  g1_trihand_retargeting_example.py  gripper_retargeting_example.py  gripper_retargeting_example_simple.py  gripper_retargeting_external_oxr_example.py  gripper_retargeting_holoscan_example.py  gripper_retargeting_simple_external_oxr_example.py  isaac_lab_gripper_example.py  locomotion_retargeting_example.py  pyproject.toml  se3_retargeting_example.py
examples/teleop_ros2/: AGENTS.md  CMakeLists.txt  Dockerfile  README.md
examples/teleop_ros2/assets/: .gitignore
examples/teleop_ros2/configs/: sharpa_wave_left_dexpilot.yml  sharpa_wave_right_dexpilot.yml
examples/teleop_ros2/python/: assets.py  constants.py  geometry.py  messages.py  node_parameters.py  pyproject.toml  session_config.py  teleop_profiles.py  teleop_ros2_bridge.py  teleop_ros2_node.py  teleop_ros2_publisher.py
examples/teleop_ros2/scripts/: fetch_sharpa_wave_urdfs.py
examples/teleop_ros2/teleop_ros2_interfaces/: CMakeLists.txt  package.xml
examples/teleop_session_manager/python/: README.md  external_inputs_example.py  pyproject.toml  teleop_session_example.py
examples/vehicle_teleop/: .gitignore  CMakeLists.txt  README.md
examples/vehicle_teleop/config/: steering_wheel_config.yaml
examples/vehicle_teleop/python/: pyproject.toml
examples/vehicle_teleop/scripts/: replay_command_mcap.sh  run_isaac_keyboard_control_worker.sh  run_isaac_remote_steering_worker.sh  run_kia_panda_worker.sh  run_panda_worker.sh
examples/xdev_list/common/: CMakeLists.txt  main_helpers.cpp  oxr_bundle.hpp
include/: CMakeLists.txt
src/core/: AGENTS.md  CMakeLists.txt  README.md
src/core/camera/: CMakeLists.txt  camera_plugin.cpp  rawdata_writer.cpp
src/core/cloudxr/: CMakeLists.txt
src/core/deviceio/: CMakeLists.txt
src/core/deviceio_session/: AGENTS.md
src/core/mcap/: CMakeLists.txt
src/core/messages/: CMakeLists.txt  tensor_utils.h
(+5589 files in other folders)
