# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Standalone pyproject for camera_viz so `uv run` resolves the example's
# deps without polluting the IsaacTeleop wheel's runtime requirements.
# isaacteleop is consumed from the locally built wheel (./build/wheels/)
# or from PyPI — point uv at it via --find-links / --with as needed.

[project]
name = "camera-viz"
version = "0.0.0"
description = "Televiz camera-feed visualizer"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pyyaml>=6.0",
    "cupy-cuda12x",
    # numpy + scipy power the placement-strategy math (quaternion ops via
    # scipy.spatial.transform.Rotation). Already in IsaacTeleop's
    # retargeters extra, so deploy boxes already have them.
    "numpy>=1.23",
    "scipy>=1.15",
]

# Vendor-SDK deps are optional. ``scripts/setup_dev_env.sh`` installs all
# four extras by default; pass ``--no-<extra>`` to skip any.
[project.optional-dependencies]
v4l2 = ["opencv-python>=4.5"]
oakd = ["depthai>=3.0"]
# pyzed isn't on PyPI — the ZED SDK's bundled ``get_python_api.py``
# produces a Python-version-specific wheel. ``setup_dev_env.sh --with-zed``
# runs that and installs the result.
rtp = [
    # GStreamer Python bindings — pair with system packages:
    #   apt install python3-gi gstreamer1.0-tools libgirepository1.0-dev \
    #               libcairo2-dev pkg-config \
    #               gstreamer1.0-plugins-{base,good,bad,ugly}
    # Pinned <3.51 because 3.51+ requires girepository-2.0 (GLib ≥2.80),
    # which Ubuntu 22.04 LTS doesn't ship. Drop the upper bound once
    # 22.04 isn't a target.
    "PyGObject>=3.40,<3.51",
    # pybind11 is a build-time dep for the native NVENC/NVDEC codec at
    # ./codec/ — kept in the runtime venv so users iterating on the
    # codec C++ can rerun ``build.sh`` without re-installing.
    "pybind11>=2.11",
]

# Native NVENC/NVDEC codec lives in ./codec/ — replaces PyNvVideoCodec
# (which holds back 3 frames of bitstream at construction → 100 ms at
# 30 fps with no kwarg to override). Build with ``codec/build.sh``;
# scripts/setup_dev_env.sh does this automatically. Requires CUDA
# toolkit + NVIDIA driver (libnvidia-encode + libnvcuvid).

[tool.uv]
python-preference = "only-managed"
